# TSIKONINA-

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  tsikonina.sql
db_connection/: database_factory.cpp  database_factory.h  idatabase.h  sqlite_database.cpp  sqlite_database.h
model/: recipe.cpp  recipe.h  recipe_downloader.cpp  recipe_downloader.h  recipe_fetcher.cpp  recipe_fetcher.h
model/db_connection/: idatabase.h  sqlite_database.cpp  sqlite_database.h
